--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
-    <HTML lang="pt-br">
-        <head>
-            <meta charset ="utf-8" >
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<HTML lang="pt-br">
+    <head>
+        <meta charset="utf-8">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+                  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+            <link href="style.css" rel="stylesheet"/>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        </head>
-        <body>
-            <h2>
-                verificando consumo da API
-            </h2>
-                <div id ="show-values">
-                    <strong>Desenvolvedor:</strong><span id ="developer"></spanid></span>
-                    <strong>Versão:</strong><span id ="version"></spanid></span>
-                    <strong>Valor da variável:</strong><span id ="value-of-variable"></spanid></span>
-                    <strong>Site da Empresa:</strong><span id ="company-site"></spanid></span>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+                            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+                             crossorigin="anonymous"></script>
+                </head>
 
-                </div>
-        </body>
-        <script>
-            $.ajax({
-                type: 'get',
-                url:"http://localhost:5000/hello-world?info=testonly"
-            }).done(function(data){
-                console.log(data);
-                document.getElementById('developer').innerHTML = data.name
-                document.getElementById('version').innerHTML = data.version
-                document.getElementById('value-of-variable').innerHTML = data.value_of_variable_info
-                document.getElementById('company-site').innerHTML = data.web_site_company
-            });
-        </script>
-    </HTML>
+                <body>
+                        <header>
+                            <div class="constainer">
+                                <div class="row">
+                                    <h2>
+                                     verificando consumo da API
+                                    </h2>
+                                </div>
+                            </div>            
+                        </header>
+                        <main>
+                         <article>
+                                <div class ="container etxt_center">
+                                     <div class="row">
+                                        <center>
+                                            <button
+                                                 type="button"
+                                                 class="btn btn-success"
+                                                 style ="width:250px;"
+                                                onclick="requestOfServer()">click aqui
+                                            </button>
+                                        </center>   
+                                    </div>
+                                </div>
+                                <div id="show-values" class ="row">
+                                     <strong>Desenvolvedor:</strong><span id="developer"></span></span>
+                                     <strong>Versão:</strong><span id="version"></span></span>
+                                     <strong>Valor da variável:</strong><span id="value-of-variable"></span></span>
+                                     <strong>Site da Empresa:</strong><span id="company-site"></span></span>
+                                </div>
+                        </article> 
+                        </main> 
+                    <script src = "app.js"></script>
+    </body>           
+ </HTML>
