--- a/Documents/html-use-framework-main/carro.html
+++ b/Documents/html-use-framework-main/carro.html
@@ -1,6 +1,7 @@
 
 /* Junto com este carro.html foi criado tambem um outro arquivo para completar
-o que foi pedido na imagem, que é o arquivo carApp.js */
+o que foi pedido na imagem, que é o arquivo carApp.js, e usando tambem style.css feito
+em sala de aula*/
 
 /* E no projeto framework-senac02.2022 tem insertCarController, e no post.php tem caminho 'carro-insert' fazendo a inserção
 no band=co de dados*/
